--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <span class="closeBtn2">&times;</span>
         </div>
         <div class="modal-body2">
-          <div class="info">
+          <div class="info"><p>
             <a>Evan Zoran<br></a>
             <a>Software Developer<br></a>
             <br>
@@ -53,7 +53,7 @@
             <a href="https://github.com/ezoran">GitHub<br></a>
             <a href="https://www.linkedin.com/in/evanzoran/">LinkedIn<br></a>
             <a href="https://soundcloud.com/evanzoran">SoundCloud<br></a>
-          </div>
+          </div></p>
 
             <div class="resume-coding">
               <div class="resume-coding-header">coding</div>
@@ -72,7 +72,7 @@
             <div class="resume-tools">
               <div class="resume-tools-header">tools</div>
               <div class="resume-tools-body">
-                GitHub<br>
+                Git<br>
                 Visual Studio<br>
                 Eclipse<br>
                 Pycharm<br>
@@ -110,16 +110,16 @@
                 <span class="closeBtn3">&times;</span>
               </div>
               <div class="modal-body3">
-                <div id="originText">
-
-                  <br>
+                <div id="originText"><p>
                   I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
                   <br>
                   I probably spent way too much time in fantasy-land as a kid, because, in some ways, I feel like I never left. I still love to create worlds and explore the infinite bounty of ridiculousness that exists in my brain. I did, however, realize that while an eight year old kid running around the backyard talking to himself may be innocent and maybe even charming, the same can not be said for a twenty-something year old adult. In order to trick society to allow me to continue my whackiness, I decided to go into Computer Science. Along the way, I discovered something about myself: all the time I had spent as a kid in fantasy-land was not a waste at all, it&rsquo;s my greatest strength!<br>
                   <br>
                   So what kind of employee would you be getting in hiring me? Well, I can't tell you exactly, but I can promise that you'll be getting someone who is passionate about creating new and exciting worlds and adventures. I constantly strive to improve myself and my abilities, so that I can truly be an asset to the people I work with.<br>
                   <br>
-                  -Evan Zoran<br>
+                  -Evan Zoran<b
+                  <br>>
+                  </p>
                 </div>
               </div>
             </div>
