fixed resume text

--- a/index.html
+++ b/index.html
@@ -59,7 +59,8 @@
               <div class="resume-coding-header">coding</div>
               <div class="resume-coding-body">
                 HTML<br>
-                SASS/CSS<br>
+                CSS<br>
+                SASS<br>
                 Javascript<br>
                 C#<br>
                 C++/C<br>
