update html text

--- a/index.html
+++ b/index.html
@@ -74,9 +74,10 @@
               <div class="resume-tools-header">tools</div>
               <div class="resume-tools-body">
                 Git<br>
+                Perforce<br>
+                Azure DevOps<br>
                 Visual Studio<br>
                 Eclipse<br>
-                Pycharm<br>
                 Atom<br>
                 Photoshop<br>
                 Blender<br>
@@ -118,8 +119,8 @@
                   <br>
                   So what kind of employee would you be getting in hiring me? Well, I can't tell you exactly, but I can promise that you'll be getting someone who is passionate about creating new and exciting worlds and adventures. I constantly strive to improve myself and my abilities, so that I can truly be an asset to the people I work with.<br>
                   <br>
-                  -Evan Zoran<b
-                  <br>>
+                  -Evan Zoran
+                  <br>
                   </p>
                 </div>
               </div>
