--- a/index.html
+++ b/index.html
@@ -108,11 +108,22 @@
           <div id = "modal3" class="modal3" tabindex="-1" role="dialog">
             <div class="modal-content3">
               <div class="modal-header3">
-                <span class="headerText3">hello there,</span>
+                <span class="headerText3">who am i?</span>
                 <span class="closeBtn3">&times;</span>
               </div>
               <div class="modal-body3">
-                <div id="originText"><p>
+                <div class="intro">
+                  <div class="profileImage"><img src="images/IMG_0680.PNG" id="me" width="200px"></div>
+                  <div class="aboutMe">
+                    <p>Hometown: Arvada, CO</p>
+                    <p>Hobbies: video games (playing and making), guitar, hiking, travel</p>
+                    <p>Current Favorite Song: "1979" by Smashing Pumpkins</p>
+                    <p>Current Favorite Movie: "The Royal Tenenbaums"</p>
+                  </div>
+                </div>
+                <div class="originText"><p>
+                  Hello There,<br>
+                  <br>
                   I was one of those typical kids who had no idea of what they wanted to do. The "dream" career pretty much rotated on a weekly basis until college. From an early age on, however, I was always pretty imaginative. I enjoyed creating worlds and stories. I'm sure my neighbors were fairly concerned when I ran around the backyard, tossing a football to myself, imagining an entire Hall of Fame career in the course of a half-hour. I have plenty of memories of epic lightsaber battles around the school, or begging my mom to buy me a new pack of Yu-Gi-Oh cards (remember when McDonald's used to give them as Happy Meal Toys? The past was truly better).<br>
                   <br>
                   I probably spent way too much time in fantasy-land as a kid, because, in some ways, I feel like I never left. I still love to create worlds and explore the infinite bounty of ridiculousness that exists in my brain. I did, however, realize that while an eight year old kid running around the backyard talking to himself may be innocent and maybe even charming, the same can not be said for a twenty-something year old adult. In order to trick society to allow me to continue my whackiness, I decided to go into Computer Science. Along the way, I discovered something about myself: all the time I had spent as a kid in fantasy-land was not a waste at all, it&rsquo;s my greatest strength!<br>
