added contact logos

--- a/index.html
+++ b/index.html
@@ -151,6 +151,16 @@
                   <a href="mailto:evanzoran17@gmail.com?Subject=Inquiry">evanzoran17@gmail.com<br></a></li>
                   <a>(303)-725-0664</a></li>
                 </div>
+                <div class="twitterLogo">
+                  <a href="https://twitter.com/evanTHEzoran"><img src="images/twitterLogoHand.png" width="200px"></a>
+                </div>
+                <div class="instaLogo">
+                  <a href="https://www.instagram.com/evan_zoran/"><img src="images/igLogoHand.png" width="200px"></a>
+                </div>
+                <div class="linkedinLogo">
+                  <a href="https://www.linkedin.com/in/evanzoran/"><img src="images/linkedinLogohand.png" width="200px"></a>
+                </div>
+
               </div>
             </div>
           </div>
