added twitter animation

--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                   <a>(303)-725-0664</a></li>
                 </div>
                 <div class="twitterLogo">
-                  <a href="https://twitter.com/evanTHEzoran"><img src="images/twitterLogoHand.png" width="200px"></a>
+                  <a href="https://twitter.com/evanTHEzoran"><img src="images/twitterRAW.gif" width="200px"></a>
                 </div>
                 <div class="instaLogo">
                   <a href="https://www.instagram.com/evan_zoran/"><img src="images/igLogoHand.png" width="200px"></a>
