--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <span class="closeBtn1">&times;</span>
       </div>
       <div class="modal-body1">
-        <div class="intro"><p>Why hello, what is this you may ask? It's a little experiment of mine to build a blog from scratch. You can view the source code <a href="https://github.com/ezoran/DynamicBlog">here<a/>. I'm not exactly sure what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
+        <div class="intro"><p>Why hello, what is this you may ask? It's a little experiment of mine to build a blog from scratch. You can view the source code <a href="https://github.com/ezoran/DynamicBlog">here</a>. I'm not exactly sure what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
           <!-- Lookat -->
 
           <!-- don't delete these bottom 3 </div>-->
@@ -52,7 +52,6 @@
             <a href="ezoranResume9.9.18.pdf" target="_blank">Resume PDF<br></a>
             <a href="https://github.com/ezoran">GitHub<br></a>
             <a href="https://www.linkedin.com/in/evanzoran/">LinkedIn<br></a>
-            <a href="https://soundcloud.com/evanzoran">SoundCloud<br></a>
           </div></p>
 
             <div class="resume-coding">
@@ -77,12 +76,9 @@
                 Perforce<br>
                 Azure DevOps<br>
                 Visual Studio<br>
-                Eclipse<br>
-                Atom<br>
                 Photoshop<br>
+                Jira<br>
                 Blender<br>
-                Unreal Engine<br>
-                Unity Engine<br>
               </div>
             </div>
             <div class="resume-projects">
