--- a/index.html
+++ b/index.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title></title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" lang="en">
   <link rel="stylesheet" type="text/css" href="public/scss/style.css">
 </head>
 <body>
