--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <title></title>
-  <meta name="viewport" content="width=device-width, initial-scale=1" lang="en">
+  <title>ezoran.github.io</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="stylesheet" type="text/css" href="public/scss/style.css">
 </head>
 <body>
