--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 
-  <div id="skater"><img src="images/skaterAnimation.gif" id="skater_inside" height="400px" style=opacity:1;></div>
+  <div id="skater"><img src="images/skaterAnimation.gif" id="skater_inside" alt="Skater" height="400" style=opacity:1;></div>
 
   <div class="title"><p>evan&nbsp;zoran<br>coding/design</p></div>
 
@@ -110,7 +110,7 @@
               </div>
               <div class="modal-body3">
                 <div class="intro">
-                  <div class="profileImage"><img src="images/IMG_0680.png" id="me" width="200px"></div>
+                  <div class="profileImage"><img src="images/IMG_0680.png" id="me" width="200"></div>
                   <div class="aboutMe">
                     <p>Hometown: Arvada, CO</p>
                     <p>Hobbies: video games (playing and making), guitar, hiking, travel</p>
@@ -149,13 +149,13 @@
                   <a>(303)-725-0664</a></li>
                 </div>
                 <div class="twitterLogo">
-                  <a href="https://twitter.com/evanTHEzoran"><img src="images/twitterRAW.gif" width="200px"></a>
+                  <a href="https://twitter.com/evanTHEzoran"><img src="images/twitterRAW.gif" width="200" alt="Twitter"></a>
                 </div>
                 <div class="instaLogo">
-                  <a href="https://www.instagram.com/evan_zoran/"><img src="images/igLogoHand.png" width="200px"></a>
+                  <a href="https://www.instagram.com/evan_zoran/"><img src="images/igLogoHand.png" width="200" alt="IG"></a>
                 </div>
                 <div class="linkedinLogo">
-                  <a href="https://www.linkedin.com/in/evanzoran/"><img src="images/linkedinLogohand.png" width="200px"></a>
+                  <a href="https://www.linkedin.com/in/evanzoran/"><img src="images/linkedinLogohand.png" width="200" alt="LinkedIn"></a>
                 </div>
 
               </div>
