--- a/index.html
+++ b/index.html
@@ -46,14 +46,14 @@
           <span class="closeBtn2">&times;</span>
         </div>
         <div class="modal-body2">
-          <div class="info"><p>
+          <div class="info">
             <a>Evan Zoran<br></a>
             <a>Software Developer<br></a>
             <br>
             <a href="ezoranResume9.9.18.pdf" target="_blank">Resume PDF<br></a>
             <a href="https://github.com/ezoran">GitHub<br></a>
             <a href="https://www.linkedin.com/in/evanzoran/">LinkedIn<br></a>
-          </div></p>
+          </div>
 
             <div class="resume-coding">
               <div class="resume-coding-header">coding</div>
@@ -86,12 +86,12 @@
               <div class="resume-projects-header">projects</div>
               <div class="resume-projects-body">
                 <p>The Lonely Witch<br></p>
-                <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+                <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
                 <div class="game-text"><p>Journey into the psyche of a Young Witch named Virgil who lives at a time when her
                   kind are rejects and persecuted by society. Traverse an open world and
                   collect "Diary Pages", which serve to provide insight into Virgil's memories.</p></div>
                   <p>Project Space<br></p>
-                  <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/UzFbIpTCt98" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
+                  <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/UzFbIpTCt98" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
                   <div class="game-text"><p>Vie for control of a rare element located on Mars in this 2D couch
                     co-op strategy/action game.</p></div>
                   </div>
@@ -145,8 +145,8 @@
               </div>
               <div class="modal-body4">
                 <div class = "bodyLinks">
-                  <a href="mailto:evanzoran17@gmail.com?Subject=Inquiry">evanzoran17@gmail.com<br></a></li>
-                  <a>(303)-725-0664</a></li>
+                  <a href="mailto:evanzoran17@gmail.com?Subject=Inquiry">evanzoran17@gmail.com<br></a>
+                  <a>(303)-725-0664</a>
                 </div>
                 <div class="twitterLogo">
                   <a href="https://twitter.com/evanTHEzoran"><img src="images/twitterRAW.gif" width="200" alt="Twitter"></a>
