--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
               </div>
               <div class="modal-body3">
                 <div class="intro">
-                  <div class="profileImage"><img src="images/IMG_0680.png" id="me" width="200"></div>
+                  <div class="profileImage"><img src="images/IMG_0680.png" id="me" width="200" alt="Me"></div>
                   <div class="aboutMe">
                     <p>Hometown: Arvada, CO</p>
                     <p>Hobbies: video games (playing and making), guitar, hiking, travel</p>
