fixed resume modal text

--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <button id="modalBtn4" class="button4">contact</button>
   </div>
 
-
   <!-- Blog Modal -->
 
   <div id = "modal1" class="modal1" tabindex="-1" role="dialog">
@@ -31,7 +30,6 @@
       <div class="modal-body1">
         <div class="intro"><p>Why hello, what is this you may ask? It's a little experiment of mine to build a blog from scratch. You can view the source code <a href="https://github.com/ezoran/DynamicBlog">here</a>. I'm not exactly sure what I'll post here, and I definitely can't promise it will be profound, but here it is! </p></div>
           <!-- Lookat -->
-
           <!-- don't delete these bottom 3 </div>-->
         </div>
       </div>
@@ -54,51 +52,46 @@
             <a href="https://github.com/ezoran">GitHub<br></a>
             <a href="https://www.linkedin.com/in/evanzoran/">LinkedIn<br></a>
           </div>
+          <div class="summary">
+            <p>
+              <a class="title"><br>Summary of Skills<br></a>
+              <a class="bullets"><br>○ Experience creating websites from conception to completion using HTML, SASS, and Javascript<br>
+              ○ Experience building single-page applications<br>
+              ○ Strong knowledge of responsive web design<br>
+              ○ Ability to develop using modern CSS<br>
+              ○ Thorough understanding of Object-oriented design<br>
+              ○ Experience building single-page applications<br></a>
+              <br>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━<br>
+              <a class="title"><br>Languages<br></a>
+              <br>HTML ◦ CSS ◦ SASS ◦ Javascript ◦ Ruby ◦ C# ◦ C++ ◦ C ◦ Java ◦ Python<br>
+              <a class="title"><br><br>Tools<br></a>
+              <br>Git ◦ Perforce ◦ Azure DevOps ◦ Jira ◦ Visual Studio ◦ Photoshop<br>
+              <br>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━<br>
+              <a class="title"><br>Education<br></a>
+              <br>B.S. in Computer Science, University of Colorado at Colorado Springs
+              <i><br>August 2013 - December 2017<br></i>
 
-            <div class="resume-coding">
-              <div class="resume-coding-header">coding</div>
-              <div class="resume-coding-body">
-                HTML<br>
-                CSS<br>
-                SASS<br>
-                Javascript<br>
-                C#<br>
-                C++/C<br>
-                Java<br>
-                Python<br>
-                Ruby on Rails
-              </div>
-            </div>
+              <a class="title"><br>Experience<br></a>
+              <b><br>Freelance Developer<br></b>
+              <i>June 2017 - Present<br></i>
+              <a class="bullets"><br>○ Developed multiple responsive websites utilizing HTML, CSS, Sass, and Javascript<br>
+              ○ Built custom blog tool in Python which converts user input (both text and images) into HTML for use with static websites<br>
+              ○ Designed and implemented multiple independent games in Unity using C#<br>
+              ○ Experience designing and implementing various GUI’s using tools such as Swing in Java and TKinter in Python<br>
+              ○ Strong experience using various source-control tools to properly organize and maintain code<br></a>
 
-            <div class="resume-tools">
-              <div class="resume-tools-header">tools</div>
-              <div class="resume-tools-body">
-                Git<br>
-                Perforce<br>
-                Azure DevOps<br>
-                Visual Studio<br>
-                Photoshop<br>
-                Jira<br>
-                Blender<br>
-              </div>
-            </div>
-            <div class="resume-projects">
-              <div class="resume-projects-header">projects</div>
-              <div class="resume-projects-body">
-                <p>The Lonely Witch<br></p>
-                <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/wF19iU1HZlc" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-                <div class="game-text"><p>Journey into the psyche of a Young Witch named Virgil who lives at a time when her
-                  kind are rejects and persecuted by society. Traverse an open world and
-                  collect "Diary Pages", which serve to provide insight into Virgil's memories.</p></div>
-                  <p>Project Space<br></p>
-                  <div class="video-container"><iframe width="560" height="315" src="https://www.youtube.com/embed/UzFbIpTCt98" allow="autoplay; encrypted-media" allowfullscreen></iframe></div>
-                  <div class="game-text"><p>Vie for control of a rare element located on Mars in this 2D couch
-                    co-op strategy/action game.</p></div>
-                  </div>
-                </div>
-              </div>
-            </div>
+              <b><br>Developer, No Spoilers Studios<br></b>
+              <i>June 2018 - Present<br></i>
+              <a class="bullets"><br>○ Assisted in drafting design documentation<br>
+              ○ Worked and communicated across teams to ensure a well-rounded product<br></a>
+          </p>
           </div>
+
+      </div>
+        </div>
+      </div>
+
+
 
           <!-- About Modal -->
 
