--- a/index.html
+++ b/index.html
@@ -58,8 +58,7 @@
               <a class="bullets"><br>○ Experience creating websites from conception to completion using HTML, SASS, and Javascript<br>
               ○ Experience building single-page applications<br>
               ○ Strong knowledge of responsive web design<br>
-              ○ Thorough understanding of Object-oriented design<br>
-              ○ Experience building single-page applications<br></a>
+              ○ Thorough understanding of Object-oriented design<br></a>
               <br>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━<br>
               <a class="title"><br>Languages<br></a>
               <br>HTML ◦ CSS ◦ SASS ◦ Javascript ◦ Ruby ◦ C# ◦ C++ ◦ C ◦ Java ◦ Python<br>
