--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <br>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━<br>
               <a class="title"><br>Languages<br></a>
               <br>HTML ◦ CSS ◦ SASS ◦ Javascript ◦ Ruby ◦ C# ◦ C++ ◦ C ◦ Java ◦ Python<br>
-              <a class="title"><br><br>Tools<br></a>
+              <a class="title"><br>Tools<br></a>
               <br>Git ◦ Perforce ◦ Azure DevOps ◦ Jira ◦ Visual Studio ◦ Photoshop<br>
               <br>━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━<br>
               <a class="title"><br>Education<br></a>
